# neuroquest-examples

./: .gitignore  README.md
binder/: requirements.txt
products/persona-predict/notebooks/: Persona-Predict-Batch-PT-BR.ipynb  Persona-Predict-Eval-PT-BR.ipynb  Persona-Predict-MySelf-EN-US.ipynb  Persona-Predict-MySelf.ipynb  Persona-Predict-Pop-Conf-PT-BR.ipynb  Persona-Predict-Pop-PT-BR.ipynb  Persona-Predict-Pop.ipynb  Persona-Predict.ipynb  README.md  my-essay-en.txt  my-essay-pt.txt  my-essay.txt  predict-result.json  pyproject.toml  requirements.txt  run-jupyter  utility.py
products/persona-predict/notebooks/essays/: my-essay-en-us.txt  my-essay-it.txt  my-essay-pt-br.txt
products/persona-predict/notebooks/results/: persona-predict-v2-A-avg.json  persona-predict-v2-A-high.json  persona-predict-v2-A-low.json  persona-predict-v2-C-avg.json  persona-predict-v2-C-high.json  persona-predict-v2-C-low.json  persona-predict-v2-E-avg.json  persona-predict-v2-E-high.json  persona-predict-v2-E-low.json  persona-predict-v2-N-avg.json  persona-predict-v2-N-high.json  persona-predict-v2-N-low.json  persona-predict-v2-O-avg.json  persona-predict-v2-O-high.json  persona-predict-v2-O-low.json  persona-predict-v2.json
products/persona-predict/notebooks/results/batch/: persona-predict-v2-0PzhFpyJK9meD1DZToeV.json  persona-predict-v2-0cz8SiwpK6VSQxtJKNQv.json  persona-predict-v2-0ztHFQ1yQRn0N8i4Hr7A.json  persona-predict-v2-1CjWjyviKOjCV8FQYHh0.json  persona-predict-v2-1baDkY1uqOnkikCWF0dL.json  persona-predict-v2-1f1LI24LTHkKqnVn9eEd.json  persona-predict-v2-1jIBQ8x3p0XpFw5ho3q9.json  persona-predict-v2-1m9tr3vMOKvrhkYdmfKn.json  persona-predict-v2-2Je8p27Q6ynmCs1a9cIP.json  persona-predict-v2-2MBTMkosTaXkHQ1zkTXY.json  persona-predict-v2-2fGODNwQkqz0jwXXRHvx.json  persona-predict-v2-2jgeDcAe2Vn4u3dQW1s9.json  persona-predict-v2-36l7O7otQQ5hmcNEBF9e.json  persona-predict-v2-3lbylEJnYyGoAG5iaMuY.json  persona-predict-v2-4D4rVIMVhChnV00980HM.json  persona-predict-v2-5dQaEZnYkRj4e8W1krdc.json  persona-predict-v2-6IBhsaL7pMHFygkhF417.json  persona-predict-v2-6MBlWTZbfHDO238jbnSy.json  persona-predict-v2-6v38QU7aR97Oeyx5LDUN.json  persona-predict-v2-74wkrGixJ9DXtvKtqsWA.json  persona-predict-v2-7IzjmGUKmvAzBOEjvGrw.json  persona-predict-v2-7YKtKaNrQ6NOnXfI7V7B.json  persona-predict-v2-7a36NEd5FD2LXSNLD64V.json  persona-predict-v2-7qBOVp2SAqRWyY9XldhJ.json  persona-predict-v2-8LQcnzWlkfsxx3OSljJi.json  persona-predict-v2-9QEdOC0QNm9a8V4m0rO0.json  persona-predict-v2-9a5WycwvEsqxafh1QpdT.json  (+173 more)
products/persona-predict/python/: README.md  predict.py  pyproject.toml
products/power-skills/python/: README.md  predict-audio-response.json  predict-response.json  predict-text-response.json  predict.py  pyproject.toml
products/reports/python/: README.md  pyproject.toml  report.py
products/spectrum/notebooks/: README.md  Spectrum-EDA.ipynb  Spectrum-JFK.ipynb  audio-ser-result.json  audio-transcription-result.json  pyproject.toml  requirements.txt  run-jupyter  utility.py
(+58 files in other folders)
