[tool.poetry]
name = "predict"
version = "0.1.0"
description = "Persona-Predict EDA Examples"
authors = ["Ederson Corbari <e@neuroquest.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jupyterlab = "^4.0.6"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
faker = "^19.6.2"
isort = "^5.12.0"
plotly = "^5.18.0" 
wordcloud = "^1.9.2"
nltk = "^3.8.1"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
