[tool.poetry]
name = "predict"
version = "0.1.0"
description = "Power-Skills Examples"
authors = ["Ederson Corbari <ecorbari@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
