[tool.poetry]
name = "spectrum"
version = "0.1.0"
description = "Spectrum Audio - EDA Examples"
authors = ["Ederson Corbari <e@neuroquest.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.0.6"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
isort = "^5.12.0"
plotly = "^5.18.0" 
librosa = "^0.10.1"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
